--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -461,6 +461,7 @@
     <Compile Include="Commands\Selenium\SyncAmazonVcdCommand.cs" />
     <Compile Include="Commands\Selenium\SynchAmazonVcdCustomReportsCommand.cs" />
     <Compile Include="Common\AdfStatsTypeAgg.cs" />
+    <Compile Include="Common\AmazonCustomReportType.cs" />
     <Compile Include="Common\CommandAutoStopWatcher.cs" />
     <Compile Include="Common\Email\EmailNotificationsService.cs" />
     <Compile Include="Common\Email\IEmailNotificationsService.cs" />
@@ -561,24 +562,20 @@
     <Compile Include="Etl\AmazonSelenium\PDA\Extractors\AmazonPdaExtractor.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Models\AmazonPdaCampaignSummary.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\PdaDataProviderBuilder.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\GeographicSalesInsightsExtractor.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\NetPpmExtractor.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\RepeatPurchaseBehaviorExtractor.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\GeographicSalesInsightsReportCsvParser.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\NetPpmReportCsvParser.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RepeatPurchaseBehaviorReportCsvParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportExtractor.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\BaseCustomReportRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\GeographicSalesInsightsProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\NetPpmProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\RepeatPurchaseBehaviorProductsRowMap.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\GeographicSalesInsightsLoader.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\NetPpmLoader.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\RepeatPurchaseBehaviorLoader.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\GeographicSalesInsightReportData.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\GeographicSalesInsightsProduct.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\NetPpmProduct.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\NetPpmReportData.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\RepeatPurchaseBehaviorProduct.cs" />
-    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\RepeatPurchaseBehaviorReportData.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\VcdCustomReportParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\VcdCustomReportLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Base\VcdCustomReportData.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Interface\ISumMetrics.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\GeoSalesProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\NetPpmProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\RepeatPurchaseBehaviorProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Base\VcdCustomProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\VcdCustomReportExtractorParameters.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Configuration\VcdWorkflowHelper.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Extractors\AmazonVcdExtractor.cs" />
     <Compile Include="Etl\AmazonSelenium\VCD\Extractors\VcdExtractionHelpers\ReportParsing\ParsingConverters\DecimalPercentageReportConverter.cs" />
