--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -568,6 +568,8 @@
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\NetPpmProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\RepeatPurchaseBehaviorProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\VcdCustomReportParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\GeographicSalesInsightsLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\NetPpmLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\VcdCustomReportLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Base\VcdCustomReportData.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Interface\ISumMetrics.cs" />
