--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -216,6 +216,10 @@
     <Compile Include="MigrationsTD\202103221619581_Mig_VcdAddNetPpmGeoSIRepPB.Designer.cs">
       <DependentUpon>202103221619581_Mig_VcdAddNetPpmGeoSIRepPB.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\202103261447345_Mig_FixQuarterlyTableName.cs" />
+    <Compile Include="MigrationsTD\202103261447345_Mig_FixQuarterlyTableName.Designer.cs">
+      <DependentUpon>202103261447345_Mig_FixQuarterlyTableName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1307,6 +1311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202103221619581_Mig_VcdAddNetPpmGeoSIRepPB.resx">
       <DependentUpon>202103221619581_Mig_VcdAddNetPpmGeoSIRepPB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202103261447345_Mig_FixQuarterlyTableName.resx">
+      <DependentUpon>202103261447345_Mig_FixQuarterlyTableName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
