--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -563,18 +563,27 @@
     <Compile Include="Etl\AmazonSelenium\PDA\Models\AmazonPdaCampaignSummary.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\PdaDataProviderBuilder.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportExtractor.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\AlternativePurchaseRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\BaseCustomReportRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\GeographicSalesInsightsProductsRowMap.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\ItemComparisonRowMap.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\MarketBasketAnalysisRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\NetPpmProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\RowMaps\RepeatPurchaseBehaviorProductsRowMap.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Extractors\VcdCustomReportsExtractionHelpers\ReportParsing\VcdCustomReportParser.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\AlternativePurchaseLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\GeographicSalesInsightsLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\ItemComparisonLoader.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\MarketBasketAnalysisLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\NetPpmLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\RepeatPurchaseBehaviorLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Loaders\VcdCustomReportLoader.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Base\VcdCustomReportData.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Interface\ISumMetrics.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\AlternativePurchaseProduct.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\GeoSalesProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\ItemComparisonProduct.cs" />
+    <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\MarketBasketAnalysisProduct.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\NetPpmProduct.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Products\RepeatPurchaseBehaviorProduct.cs" />
     <Compile Include="Etl\AmazonSelenium\VCDCustomReports\Models\Base\VcdCustomProduct.cs" />
