--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Areas\ProgAdmin\Models\AccountMaintenanceVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\Adform\AdformLatestsInfoVm.cs" />
     <Compile Include="Areas\ProgAdmin\Models\CampaignPacingVM.cs" />
+    <Compile Include="Areas\ProgAdmin\Models\CustomSpecialPlatformSummariesVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DailySummariesVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DashboardVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DBM\DbmLatestsInfoVm.cs" />
@@ -1231,6 +1232,7 @@
     <Content Include="Areas\ProgAdmin\Views\DBM\Latests.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\YAM\Latests.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Adform\Latests.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\ExtAccounts\IndexCustomSpecialPlatformStats.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
