--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -3,9 +3,9 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net461" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net461" />
@@ -18,6 +18,7 @@
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="93.0.4577.6300" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.1.2" targetFramework="net461" />
